Include msgfmt output in ClickOnce deployment

--- a/Moras.Net/Moras.Net.csproj
+++ b/Moras.Net/Moras.Net.csproj
@@ -31,8 +31,8 @@
     <ProductName>Moras Ausrüstungsplaner</ProductName>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>393</ApplicationRevision>
-    <ApplicationVersion>2.5.0.393</ApplicationVersion>
+    <ApplicationRevision>394</ApplicationRevision>
+    <ApplicationVersion>2.5.0.394</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -587,7 +587,7 @@
     </Compile>
     <None Include="app.config" />
     <None Include="key.snk" />
-    <None Include="locale\en\LC_MESSAGES\default.po" />
+    <msgfmt Include="locale\en\LC_MESSAGES\default.po" />
     <Content Include="moras.ini">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -676,11 +676,145 @@
       <DefaultIcon>mainicon.ico</DefaultIcon>
     </FileAssociation>
   </ItemGroup>
+  <ItemGroup>
+    <PublishFile Include="reports\Configreport_de.rpt">
+      <Visible>False</Visible>
+      <Group>
+      </Group>
+      <TargetPath>
+      </TargetPath>
+      <PublishState>DataFile</PublishState>
+      <IncludeHash>True</IncludeHash>
+      <FileType>File</FileType>
+    </PublishFile>
+    <PublishFile Include="reports\Configreport_en.rpt">
+      <Visible>False</Visible>
+      <Group>
+      </Group>
+      <TargetPath>
+      </TargetPath>
+      <PublishState>DataFile</PublishState>
+      <IncludeHash>True</IncludeHash>
+      <FileType>File</FileType>
+    </PublishFile>
+    <PublishFile Include="reports\Crafterreport_de.rpt">
+      <Visible>False</Visible>
+      <Group>
+      </Group>
+      <TargetPath>
+      </TargetPath>
+      <PublishState>DataFile</PublishState>
+      <IncludeHash>True</IncludeHash>
+      <FileType>File</FileType>
+    </PublishFile>
+    <PublishFile Include="reports\Crafterreport_en.rpt">
+      <Visible>False</Visible>
+      <Group>
+      </Group>
+      <TargetPath>
+      </TargetPath>
+      <PublishState>DataFile</PublishState>
+      <IncludeHash>True</IncludeHash>
+      <FileType>File</FileType>
+    </PublishFile>
+    <PublishFile Include="reports\Materiallist_de.rpt">
+      <Visible>False</Visible>
+      <Group>
+      </Group>
+      <TargetPath>
+      </TargetPath>
+      <PublishState>DataFile</PublishState>
+      <IncludeHash>True</IncludeHash>
+      <FileType>File</FileType>
+    </PublishFile>
+    <PublishFile Include="reports\Materiallist_en.rpt">
+      <Visible>False</Visible>
+      <Group>
+      </Group>
+      <TargetPath>
+      </TargetPath>
+      <PublishState>DataFile</PublishState>
+      <IncludeHash>True</IncludeHash>
+      <FileType>File</FileType>
+    </PublishFile>
+    <PublishFile Include="reports\Shortreport_de.rpt">
+      <Visible>False</Visible>
+      <Group>
+      </Group>
+      <TargetPath>
+      </TargetPath>
+      <PublishState>DataFile</PublishState>
+      <IncludeHash>True</IncludeHash>
+      <FileType>File</FileType>
+    </PublishFile>
+    <PublishFile Include="reports\Shortreport_en.rpt">
+      <Visible>False</Visible>
+      <Group>
+      </Group>
+      <TargetPath>
+      </TargetPath>
+      <PublishState>DataFile</PublishState>
+      <IncludeHash>True</IncludeHash>
+      <FileType>File</FileType>
+    </PublishFile>
+    <PublishFile Include="weights\dummy.txt">
+      <Visible>False</Visible>
+      <Group>
+      </Group>
+      <TargetPath>
+      </TargetPath>
+      <PublishState>DataFile</PublishState>
+      <IncludeHash>True</IncludeHash>
+      <FileType>File</FileType>
+    </PublishFile>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PreBuildEvent>mkdir "$(TargetDir)locale\en\LC_MESSAGES"
-"$(SolutionDir)packages\Gettext.Tools.0.19.8.1\tools\bin\msgfmt.exe" --output-file="$(TargetDir)locale\en\LC_MESSAGES\default.mo" "$(ProjectDir)\locale\en\LC_MESSAGES\default.po"</PreBuildEvent>
+  <Import Project="..\po.targets" />
+  <PropertyGroup Condition="'$(msgfmtBeforeTargets)' == '' and '$(msgfmtAfterTargets)' == '' and '$(ConfigurationType)' != 'Makefile'">
+    <msgfmtBeforeTargets>CoreBuild</msgfmtBeforeTargets>
+    <msgfmtAfterTargets>BeforeBuild</msgfmtAfterTargets>
   </PropertyGroup>
+  <PropertyGroup>
+    <msgfmtDependsOn>AddmsgfmtPublishFile;$(msgfmtDependsOn)</msgfmtDependsOn>
+    <PrepareResourceNamesDependsOn>AddmsgfmtPublishFile;$(PrepareResourceNamesDependsOn)</PrepareResourceNamesDependsOn>
+    <GenerateManifestsDependsOn>AddmsgfmtPublishFile;$(GenerateManifestsDependsOn)</GenerateManifestsDependsOn>
+  </PropertyGroup>
+  <ItemDefinitionGroup>
+    <msgfmt>
+      <Verbose>False</Verbose>
+      <OutputName>$(OutDir)locale\en\LC_MESSAGES\%(Filename).mo</OutputName>
+      <CommandLineTemplate>"$(SolutionDir)packages\Gettext.Tools.0.19.8.1\tools\bin\msgfmt.exe" [AllOptions] [AdditionalOptions] [inputs]</CommandLineTemplate>
+      <Outputs>%(OutputName)</Outputs>
+      <ExecutionDescription>Compiling %(Filename) locale</ExecutionDescription>
+    </msgfmt>
+  </ItemDefinitionGroup>
+  <PropertyGroup>
+    <PreBuildEvent>
+    </PreBuildEvent>
+  </PropertyGroup>
+  <Target Name="AddmsgfmtPublishFile" Condition="'@(msgfmt)' != ''" DependsOnTargets="ComputemsgfmtOutput" Returns="@(PublishFile)">
+    <ItemGroup>
+      <_Temporary Remove="@(_Temporary)" />
+      <_Temporary Condition="'@(msgfmt)' != '' and '%(msgfmt.ExcludedFromBuild)' != 'true'" Include="%(msgfmt.Outputs)" />
+      <Content Include="@(_Temporary)" />
+      <_TemporaryWithTargetPath Remove="@(_TemporaryWithTargetPath)" />
+    </ItemGroup>
+    <AssignTargetPath Files="@(_Temporary)" RootFolder="$(TargetDir)">
+      <Output TaskParameter="AssignedFiles" ItemName="_TemporaryWithTargetPath" />
+    </AssignTargetPath>
+    <ItemGroup>
+      <PublishFile Include="@(_TemporaryWithTargetPath)">
+        <Visible>True</Visible>
+        <Group>
+        </Group>
+        <PublishState>Include</PublishState>
+        <IncludeHash>True</IncludeHash>
+        <FileType>File</FileType>
+      </PublishFile>
+      <_Temporary Remove="@(_Temporary)" />
+      <_TemporaryWithTargetPath Remove="@(_TemporaryWithTargetPath)" />
+    </ItemGroup>
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
