--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,8 @@ markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+gems:
+  - jekyll-seo-tag
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
