--- a/Moras.Net/Moras.Net.csproj
+++ b/Moras.Net/Moras.Net.csproj
@@ -31,8 +31,8 @@
     <ProductName>Moras Ausrüstungsplaner</ProductName>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>396</ApplicationRevision>
-    <ApplicationVersion>2.5.0.396</ApplicationVersion>
+    <ApplicationRevision>397</ApplicationRevision>
+    <ApplicationVersion>2.5.0.397</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -353,6 +353,7 @@
     </Content>
     <Content Include="options\language_german.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="options\sc_beispiel_Festpreis.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
