Create and use a helper class for the construction of objects from generic type parameters. The new() constraint can be realy slow because it uses Activator.CreateInstance<T> for reference types.

--- a/DelphiClasses/DelphiClasses.csproj
+++ b/DelphiClasses/DelphiClasses.csproj
@@ -60,6 +60,7 @@
     </Compile>
     <Compile Include="DynamicArray.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="GenericConstructor.cs" />
     <Compile Include="HelpIntfs\IHelpSystem2.cs" />
     <Compile Include="HelpIntfs\IHelpSystem3.cs" />
     <Compile Include="HelpIntfs\ISetActiveControl.cs" />
