--- a/Moras.Net/app.config
+++ b/Moras.Net/app.config
@@ -9,4 +9,7 @@
            type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite, Version=1.0.99.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139" />
     </DbProviderFactories>
   </system.data>
+    <startup> 
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client" />
+    </startup>
 </configuration>
