--- a/Moras.Net/packages.config
+++ b/Moras.Net/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="MSBuildTasks" version="1.5.0.235" targetFramework="net40-Client" developmentDependency="true" />
   <package id="ObjectListView.ClientProfile" version="2.9.5" targetFramework="net40-Client" />
 </packages>
