--- a/Moras.Net/Moras.Net.csproj
+++ b/Moras.Net/Moras.Net.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\Gettext.Tools.0.21.0.1\build\Gettext.Tools.props" Condition="Exists('..\packages\Gettext.Tools.0.21.0.1\build\Gettext.Tools.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
@@ -38,6 +39,8 @@
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -91,10 +94,11 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>
+    </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>mainicon.ico</ApplicationIcon>
@@ -106,10 +110,10 @@
     <ManifestKeyFile>Moras.Net_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <GenerateManifests>true</GenerateManifests>
+    <GenerateManifests>false</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
@@ -125,8 +129,14 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Libs\Indy.Sockets.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.VisualBasic" />
-    <Reference Include="Microsoft.VisualBasic.PowerPacks.Vs, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.VisualBasic, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\VisualBasic.PowerPacks.Vs.1.0.0\lib\Microsoft.VisualBasic.dll</HintPath>
+      <Private>True</Private>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.VisualBasic.PowerPacks.Vs, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\VisualBasic.PowerPacks.Vs.1.0.0\lib\Microsoft.VisualBasic.PowerPacks.Vs.dll</HintPath>
+    </Reference>
     <Reference Include="ObjectListView, Version=2.9.2.0, Culture=neutral, PublicKeyToken=b1c5bf581481bcd4, processorArchitecture=MSIL">
       <HintPath>..\packages\ObjectListView.ClientProfile.2.9.5\lib\net40-Client\ObjectListView.dll</HintPath>
       <Private>True</Private>
@@ -624,12 +634,10 @@
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="key.snk" />
     <msgfmt Include="locale\en\LC_MESSAGES\default.po" />
     <Content Include="MORAS.HLP">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <None Include="Moras.Net_TemporaryKey.pfx" />
     <None Include="packages.config" />
     <None Include="Properties\app.manifest" />
     <None Include="Properties\Settings.settings">
@@ -702,14 +710,7 @@
       <Name>Moras.Net.Components</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <FileAssociation Include=".mox">
-      <Visible>False</Visible>
-      <Description>Moras Character</Description>
-      <Progid>Moras.Character</Progid>
-      <DefaultIcon>mainicon.ico</DefaultIcon>
-    </FileAssociation>
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <PublishFile Include="DelphiClasses.pdb">
       <Visible>False</Visible>
@@ -900,7 +901,7 @@
     <msgfmt>
       <Verbose>False</Verbose>
       <OutputName>$(OutDir)locale\en\LC_MESSAGES\%(Filename).mo</OutputName>
-      <CommandLineTemplate>"$(SolutionDir)packages\Gettext.Tools.0.19.8.1\tools\bin\msgfmt.exe" [AllOptions] [AdditionalOptions] [inputs]</CommandLineTemplate>
+      <CommandLineTemplate>"$(SolutionDir)packages\Gettext.Tools.0.21.0.1\tools\bin\msgfmt.exe" [AllOptions] [AdditionalOptions] [inputs]</CommandLineTemplate>
       <Outputs>%(OutputName)</Outputs>
       <ExecutionDescription>Compiling %(Filename) locale</ExecutionDescription>
     </msgfmt>
@@ -940,6 +941,7 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\MSBuildTasks.1.5.0.235\build\MSBuildTasks.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\MSBuildTasks.1.5.0.235\build\MSBuildTasks.targets'))" />
     <Error Condition="!Exists('..\packages\CreatePublishWebPage.1.0.0.3\build\CreatePublishWebPage.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\CreatePublishWebPage.1.0.0.3\build\CreatePublishWebPage.targets'))" />
+    <Error Condition="!Exists('..\packages\Gettext.Tools.0.21.0.1\build\Gettext.Tools.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Gettext.Tools.0.21.0.1\build\Gettext.Tools.props'))" />
   </Target>
   <Target Name="BeforeCompile" Condition="'$(BuildingInsideVisualStudio)|$(Configuration)' == '|Release'">
     <FormatVersion Version="$(ApplicationVersion)" Revision="$(ApplicationRevision)">
