--- a/Moras.Net/packages.config
+++ b/Moras.Net/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CreatePublishWebPage" version="1.0.0.3" targetFramework="net40-Client" developmentDependency="true" />
+  <package id="Gettext.Tools" version="0.21.0.1" targetFramework="net45" />
   <package id="MSBuildTasks" version="1.5.0.235" targetFramework="net40-Client" developmentDependency="true" />
   <package id="ObjectListView.ClientProfile" version="2.9.5" targetFramework="net40-Client" />
+  <package id="VisualBasic.PowerPacks.Vs" version="1.0.0" targetFramework="net45" />
 </packages>
